# LLM_MTD

./: .env  DEPLOYMENT.md  LLMClient.py  README.md  __init__.py  config.yaml  requirements.txt  topology_auto.P
LLM_MTD_eval/: .env  .env.example  README.md  pyproject.toml  requirements.txt
LLM_MTD_eval/configs/models/: baseline_game.yaml  baseline_rule.yaml  hybrid_game_llm.yaml  llm_only.yaml
LLM_MTD_eval/configs/prompts/: defender_user_template.txt  hybrid_user_template.txt  summary_template.txt
LLM_MTD_eval/configs/schemas/: llm_decision.schema.json
LLM_MTD_eval/docs/: architecture.md  codex_tasks.md  experiment_protocol.md  metrics_definition.md
LLM_MTD_eval/llm_mtd_eval/: __init__.py  cli.py  emo_bridge.py  settings.py  types.py
LLM_MTD_eval/llm_mtd_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
LLM_MTD_eval/llm_mtd_eval/baselines/: __init__.py  game_baseline.py  random_baseline.py  rule_baseline.py
LLM_MTD_eval/llm_mtd_eval/emulator_client/: __init__.py  cloud_policy_client.py  core_client.py  logger_client.py  ryu_client.py
LLM_MTD_eval/llm_mtd_eval/evaluators/: __init__.py  llm_quality_metrics.py  metrics_collector.py  overhead_metrics.py  qos_metrics.py  result_aggregator.py  run_stage.py  run_trial.py  security_metrics.py
LLM_MTD_eval/llm_mtd_eval/llm_layer/: __init__.py  action_adapter.py  active_pool_manager.py  constraint_guard.py  defender_selector.py  llm_client.py  prompt_builder.py  response_parser.py  stage_summarizer.py
LLM_MTD_eval/llm_mtd_eval/reports/: __init__.py  build_figures.py  (+4 more)
(+527 files in other folders)
