[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-mtd-eval"
version = "0.1.0"
description = "Evaluation layer for combining LLM_MTD analytics with the LLM_MTD_emo emulation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "jsonschema>=4.22",
  "pandas>=2.2",
  "matplotlib>=3.8",
]

[project.scripts]
llm-mtd-eval = "llm_mtd_eval.cli:main"

[tool.setuptools.packages.find]
include = ["llm_mtd_eval*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["llm_mtd_eval/tests"]
